--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 						<div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-1.jpg">
 						</div>
-						<div class="swiper-slide">
+						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-2.jpg">
-						</div>
+						</div> -->
 						<div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-3.jpg">
 						</div>
