--- a/profession.html
+++ b/profession.html
@@ -44,6 +44,17 @@
 .font4{
 	font-size: 30px;
 }
+.font5{
+	font-size: 24px;
+	font-weight: 600;
+}
+.font6{
+	font-size: 20px;
+	font-weight: 600;
+}
+.font7{
+	font-size: 30px;
+}
 .section1 .content{
 	position: absolute;
     width: 45%;
@@ -102,7 +113,7 @@
 .section3 .cont1>span{
 	padding: 0 20px;
     display: inline-block;
-    font-size: 28px;
+    font-size: 24px;
     height: 40px;
     line-height: 35px;
 	border-radius: 20px;
@@ -133,8 +144,8 @@
 	font-size: 16px;
 }
 .section4 .cont1{
-	height: 35px;
-    line-height: 30px;
+	height: 40px;
+    line-height: 35px;
     padding-left: 10px;
 }
 .section4 .cont2{
@@ -384,6 +395,12 @@
     line-height: 50px;
 	/* display: none; */
 }
+.section8 .title{
+	height: 39px;
+    line-height: 40px;
+    text-align: center;
+    margin-bottom: 5px;
+}
 
 </style>
 </head>
@@ -453,7 +470,7 @@
 	<section class="welcome-section section4" data-item="4" style="padding:0">
 		<img src="images/profession/4-1.jpg">
 		<div class="content">
-			<div class="cont1 my-bg-color7 my-color2 font1 wow fadeInRight">员工发展</div>
+			<div class="cont1 my-bg-color7 my-color2 font7 wow fadeInRight">员工发展</div>
 			<div class="cont2 my-color5 font2 wow fadeInRight ani-time2">打造一个没有天花板的舞台</div>
 			<div class="cont3 wow fadeInRight ani-time3">我们期望为人才的成长与发展提供良好的土壤和广阔的平台，在注重企业自身
 				不断发展的同时，我们重视每一位员工以及用于培养他们的资源投入。我们倡导：
@@ -466,7 +483,7 @@
 		<div class="content">
 			<div class="content1 wow fadeInDown100">
 				<div class="my-all-center">
-					<div class="cont1 font1 my-color5">学习与发展原则</div>
+					<div class="cont1 font5 my-color5">学习与发展原则</div>
 					<div class="cont2">员工发展的表现来源于个人在职业生涯中的改变、适应以及成长能力。
 						重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
 					</div>
@@ -496,7 +513,7 @@
 		<img src="images/profession/6-1.jpg">
 		<div class="content content1 my-color1 wow fadeInLeft">
 			<div class="cont-box">
-				<div class="cont1 font1 my-color2">多样化学习资源</div>
+				<div class="cont1 font5 my-color2">多样化学习资源</div>
 				<div class="cont2">在三个基本原则的指导下，公司对员工的学习发展体系建设中也遵循10-20-70的发展原则，
 					让培养与发展的资源更有助于转化为员工的能力。</div>
 				<div class="line">
@@ -530,7 +547,7 @@
 		<div class="content content2">
 			<div class="cont cont1 wow fadeInUp ani-time3"><img src="images/profession/icon6-5.png"></div>
 			<div class="cont cont2 wow fadeInRight ani-time3">
-				<div class="cont-text1 font1 my-color5">员工发展通路</div>
+				<div class="cont-text1 font5 my-color5">员工发展通路</div>
 				<div class="cont-text2">在重庆延锋安道拓，员工的职业发展主要通过三条通路实现：
 					管理通路、专业通路和轮岗通路。</div>
 				<div class="cont-text3">公司倡导员工澄清自己的职业发展目标，选择合适自己的职业发展方向。
@@ -542,7 +559,7 @@
 		<img src="images/profession/7-1.jpg">
 		<div class="content1">
 			<div class="cont1 wow fadeInDown100">
-				<div class="cont-text1 font1 my-color5">CQYFAS领导力学院</div>
+				<div class="cont-text1 font5 my-color5">CQYFAS领导力学院</div>
 				<div class="cont-text2">CQYFAS领导力学院培养训练有素的管理者及后备梯队人才。
 					在这里我们传承和打造CQYFAS的管理文化，旨在为每一位管理者或有潜力成为管理者的员工提供领导力成长的有序路径。
 				</div>
@@ -556,7 +573,7 @@
 		</div>
 		<div class="content2 my-color1">
 			<div class="cont-box wow fadeInRight ani-time2">
-				<div class="cont1 font1 my-color2">CQYFAS专业学院</div>
+				<div class="cont1 font5 my-color2">CQYFAS专业学院</div>
 				<div class="cont2">重庆延锋安道拓专业学院于2015年成立，旨在系统化的提升员工的专业能力，
 					在建立技术人才梯队的同时，激励和发挥高级专业人才的带头引领作用。
 				</div>
@@ -671,38 +688,39 @@
 		</div>
 	</section>
 	<section class="main-slider welcome-section section8 my-color1" data-item="8" style="padding:0">
-			<div class="my-slider-carousel owl-carousel owl-theme">
-				<div class="slide">
-					<div class="content wow fadeInUp100">
-						<img src="images/profession/8-1.jpg">
-						<div class="cont-box my-bg-color5 animated">办公一角</div>
-					</div>
-				</div>
-				<div class="slide">
-					<div class="content wow fadeInUp100">
-						<img src="images/profession/8-2.jpg">
-						<div class="cont-box my-bg-color5 animated">休闲区</div>
-					</div>
-				</div>
-				<div class="slide">
-					<div class="content wow fadeInUp100">
-						<img src="images/profession/8-3.jpg">
-						<div class="cont-box my-bg-color5 animated">健身房</div>
-					</div>
-				</div>
-				<div class="slide">
-					<div class="content wow fadeInUp100">
-						<img src="images/profession/8-4.jpg">
-						<div class="cont-box my-bg-color5 animated">咖啡吧</div>
-					</div>
-				</div>
-				<div class="slide">
-					<div class="content wow fadeInUp100">
-						<img src="images/profession/8-5.jpg">
-						<div class="cont-box my-bg-color5 animated">餐厅</div>
-					</div>
+		<div class="title my-bg-color7 my-color2 font5">办公环境</div>
+		<div class="my-slider-carousel owl-carousel owl-theme">
+			<div class="slide">
+				<div class="content wow fadeInUp100">
+					<img src="images/profession/8-1.jpg">
+					<div class="cont-box my-bg-color5 animated">办公一角</div>
 				</div>
 			</div>
+			<div class="slide">
+				<div class="content wow fadeInUp100">
+					<img src="images/profession/8-2.jpg">
+					<div class="cont-box my-bg-color5 animated">休闲区</div>
+				</div>
+			</div>
+			<div class="slide">
+				<div class="content wow fadeInUp100">
+					<img src="images/profession/8-3.jpg">
+					<div class="cont-box my-bg-color5 animated">健身房</div>
+				</div>
+			</div>
+			<div class="slide">
+				<div class="content wow fadeInUp100">
+					<img src="images/profession/8-4.jpg">
+					<div class="cont-box my-bg-color5 animated">咖啡吧</div>
+				</div>
+			</div>
+			<div class="slide">
+				<div class="content wow fadeInUp100">
+					<img src="images/profession/8-5.jpg">
+					<div class="cont-box my-bg-color5 animated">餐厅</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	
 
