--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
 						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-2.jpg">
 						</div> -->
-						<div class="swiper-slide">
+						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-3.jpg">
-						</div>
+						</div> -->
 						<div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-4.jpg">
 						</div>
