--- a/profession.html
+++ b/profession.html
@@ -110,7 +110,10 @@
 	text-align: center;
 	font-size: 16px;
 }
-.section3 .cont1>span{
+.section3 .cont1 a{
+	color: #fff;
+}
+.section3 .cont1 span{
 	padding: 0 20px;
     display: inline-block;
     font-size: 24px;
@@ -445,7 +448,11 @@
 		<div class="content-box">
 			<div class="content content1 wow fadeInLeft ani-time2">
 				<div class="my-column-center">
-					<div class="cont1"><span class="my-bg-color2">校园招聘</span></div>
+					<div class="cont1">
+						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/campus">
+							<span class="my-bg-color2">校园招聘</span>
+						</a>
+					</div>
 					<div class="cont2">座拥青春 椅靠未来</div>
 					<div class="cont3">我们每年持续开展校园招聘，</div>
 					<div class="cont3">校园人才成为五分之一的组织血液；</div>
@@ -456,7 +463,11 @@
 			</div>
 			<div class="content content2  wow fadeInRight ani-time2">
 				<div class="my-column-center">
-					<div class="cont1"><span class="my-bg-color2">社会招聘</span></div>
+					<div class="cont1">
+						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/social">
+							<span class="my-bg-color2">社会招聘</span>
+						</a>
+					</div>
 					<div class="cont2">因为有你 卓越未来</div>
 					<div class="cont3">我们一直秉承任人唯贤的价值观，寻求敢于</div>
 					<div class="cont3">创新、追求卓越、不断突破的优质人才；</div>
