--- a/about.html
+++ b/about.html
@@ -153,12 +153,14 @@
 }
 .slide5 .logo-box .item-box{
 	height: 20%;
+	margin-top: 5px;
 }
 .slide5 .logo-box img{
 	max-height: 100%;
+	border: 1px solid #ddd;
 }
 .slide5 .title-text{
-	margin: 40px 0;
+	margin: 30px 0;
     font-size: 28px;
     text-align: center;
 	font-weight: 600;
