--- a/common/footer.html
+++ b/common/footer.html
@@ -87,7 +87,7 @@
 				<div class="row clearfix">
 					<div class="footer-cont1 column">
 						<div class="logo">
-							<a href="#"><img src="images/logo.png" alt="" /></a>
+							<!-- <a href="#"><img src="images/logo.png" alt="" /></a> -->
 							<a href="https://www.adient.com"><img src="images/logo1.png" alt="" /></a>	
 							<a href="https://www.yanfengadient.com/"><img src="images/logo2.png" alt="" /></a>	
 						</div>
