--- a/culture.html
+++ b/culture.html
@@ -641,10 +641,10 @@
 	<section id="magazine" class="welcome-section section8 my-color1" data-item="8" style=" padding:0px;margin-top:20px;">
 		<div class="title-text my-bg-color7">杂志《认知》</div>
 		<div class="img-content wow fadeInLeft">
-			<div class="item-box item1 isClick" data-url="file/bb.pdf"><img src="images/culture/8-1.jpg"></div>
-			<div class="item-box item2 isClick" data-url="file/bb.pdf"><img src="images/culture/8-2.jpg"></div>
-			<div class="item-box item3 isClick" data-url="file/bb.pdf"><img src="images/culture/8-3.jpg"></div>
-			<div class="item-box item4 isClick" data-url="file/bb.pdf"><img src="images/culture/8-4.jpg"></div>
+			<div class="item-box item1 isClick" data-url="file/79.pdf"><img src="images/culture/8-1.jpg"></div>
+			<div class="item-box item2 isClick" data-url="file/80.pdf"><img src="images/culture/8-2.jpg"></div>
+			<div class="item-box item3 isClick" data-url="file/J1901-2.pdf"><img src="images/culture/8-3.jpg"></div>
+			<div class="item-box item4 isClick" data-url="file/82.pdf"><img src="images/culture/8-4.jpg"></div>
 		</div>
 		<div class="more"><img src="images/culture/more.png"></div>
 	</section>
