--- a/profession.html
+++ b/profession.html
@@ -54,6 +54,7 @@
 }
 .font7{
 	font-size: 30px;
+	font-weight: 600;
 }
 .section1 .content{
 	position: absolute;
@@ -157,6 +158,15 @@
 .section4 .cont4{
 	margin: 5px 0;
 }
+.section5 .icon.icon1{
+	position: absolute;
+    top: -70px;
+    height: 70px;
+    left: 50%;
+}
+.section5 .icon.icon2{
+	width: 10px;
+}
 .section5 .content{
 	position: relative;
 	display: flex;
@@ -190,6 +200,15 @@
 }
 .section6{
 	position: relative;
+	padding: 20px 0;
+    margin-top: 20px;
+    background: #f5f5f5;
+}
+.section6 .icon1{
+	position: absolute;
+	height: 70px;
+	top: -70px;
+	left: 55%;
 }
 .section6 .content{
 	position: absolute;
@@ -290,6 +309,12 @@
 }
 .section6 .content2 .cont2 .cont-text2{
 	margin: 10px 0 5px;
+}
+.section7 .icon.icon1{
+	position: absolute;
+    height: 110px;
+    top: -110px;
+    left: 20%;
 }
 .section7 .content1{
 	position: absolute;
@@ -490,7 +515,7 @@
 			<div class="cont5 wow fadeInRight ani-time3">让每一个独特的灵魂在没有天花板的成长空间尽情闪耀！</div>
 		</div>
 	</section>
-	<section class="main-slider welcome-section section5 my-font2" data-item="5" style="padding:0;margin-top:20px">
+	<section class="main-slider welcome-section section5 my-font2" data-item="5" style="padding:0;margin-top:30px">
 		<div class="content">
 			<div class="content1 wow fadeInDown100">
 				<div class="my-all-center">
@@ -499,7 +524,10 @@
 						重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
 					</div>
 					<div class="cont3 my-color5">公司对于员工个人学习和发展遵从</div>
-					<div class="cont4 font4 my-color5">三个基本原则</div>
+					<div class="cont4 font4 my-color5">
+						<span>三个基本原则</span>
+						<img class="icon icon2" src="images/icons/icon-triangle.png">
+					</div>
 				</div>
 			</div>
 			<div class="content2 wow fadeInUp100 ani-time3">
@@ -519,8 +547,9 @@
 				</div>
 			</div>
 		</div>
+		<img class="icon icon1" src="images/icons/icon-connect.png">
 	</section>
-	<section class="welcome-section section6" data-item="6" style="padding:0;margin-top:20px">
+	<section class="welcome-section section6" data-item="6">
 		<img src="images/profession/6-1.jpg">
 		<div class="content content1 my-color1 wow fadeInLeft">
 			<div class="cont-box">
@@ -565,10 +594,12 @@
 					同时公司为员工设置了不同发展方向的通路。</div>
 			</div>
 		</div>
+		<img class="icon icon1" src="images/icons/icon-connect.png">
 	</section>
 	<section class="welcome-section section7" data-item="7" style="padding:0">
 		<img src="images/profession/7-1.jpg">
 		<div class="content1">
+			<img class="icon icon1" src="images/icons/icon-connect.png">
 			<div class="cont1 wow fadeInDown100">
 				<div class="cont-text1 font5 my-color5">CQYFAS领导力学院</div>
 				<div class="cont-text2">CQYFAS领导力学院培养训练有素的管理者及后备梯队人才。
