--- a/about.html
+++ b/about.html
@@ -150,32 +150,39 @@
 	display: flex;
     flex-direction: column;
 	position: relative;
+	width: 80%;
+	text-align: center;
 }
 .slide5 .logo-box .item-box{
 	height: 20%;
 	margin-top: 5px;
+	/* display: flex;
+    justify-content: space-between; */
 }
 .slide5 .logo-box img{
 	max-height: 100%;
 	border: 1px solid #ddd;
+	width: 13.8%;
 }
 .slide5 .title-text{
-	margin: 30px 0;
+	margin: 30px 0 50px;
     font-size: 28px;
     text-align: center;
 	font-weight: 600;
 	display: flex;
-    align-items: center;
+	align-items: center;
+	width: 80%;
 }
 .slide5 .title-text .line{
 	display: block;
     height: 2px;
     background: rgba(0,70,91,1);
-    width: 390px;
+    width: 43%;
 }
 .slide5 .title-text .text{
-	margin: 0 10px;
-    background: #fff;
+	background: #fff;
+	display: inline-block;
+	width: 14%;
 }
 </style>
 </head>
