兼容性样式

--- a/profession.html
+++ b/profession.html
@@ -53,7 +53,7 @@
 	font-weight: 600;
 }
 .font7{
-	font-size: 30px;
+	font-size: 28px;
 	font-weight: 600;
 }
 .section1 .content{
@@ -65,7 +65,7 @@
     padding: 20px 120px 20px 30px;
 }
 .section1 .cont2{
-	margin: 10px 0;
+	margin: 20px 0 15px;
 }
 .section1 .cont2>span{
 	margin: 0 3px;
@@ -77,12 +77,9 @@
 	left: 15%;
 	width: 30%;
 }
-.section2 .cont1{
-	font-size: 20px;
-}
 .section2 .cont1>span{
 	display: inline-block;
-    height: 30px;
+    height: 40px;
 	border-bottom: 2px solid rgba(191,215,50,1);
 }
 .section2 .cont2{
@@ -424,7 +421,7 @@
 	/* display: none; */
 }
 .section8 .title{
-	height: 39px;
+	height: 45px;
     line-height: 40px;
     text-align: center;
     margin-bottom: 5px;
@@ -446,7 +443,7 @@
 	<section class="welcome-section section1 my-color1" data-item="1" style="padding:0">
 		<img src="images/profession/1-1.jpg">
 		<div class="content wow fadeInRight">
-			<div class="cont1 my-color2 font1">雇主品牌</div>
+			<div class="cont1 my-color2 font7">雇主品牌</div>
 			<div class="cont2 my-color2 font2">志存高远<span>|</span>永不止步<span>|</span>凝心聚力</div>
 			<div class="cont3">
 				<span>笃行：</span>因为有初心，所以我们愿意砥砺进取，精益求精，不断进取。<br>
@@ -458,7 +455,7 @@
 		<img src="images/profession/2-1.jpg">
 		<div class="content my-column-center">
 			<div class="wow fadeInLeft">
-				<div class="cont1"><span>面向校园</span>及社会招聘</div>
+				<div class="cont1 font7"><span>面向校园</span>及社会招聘</div>
 				<div class="cont2 font2 my-color2">这是一个追求卓越的组织；</div>
 				<div class="cont3">每一个加入这里的人，都是有信念，有态度，有追求的人，我们志同道合，不忘初心；<br>
 				每个人在这里变得更好，至臻尽善。</div>
@@ -730,7 +727,7 @@
 		</div>
 	</section>
 	<section class="main-slider welcome-section section8 my-color1" data-item="8" style="padding:0">
-		<div class="title my-bg-color7 my-color2 font5">办公环境</div>
+		<div class="title my-bg-color7 my-color2 font7">办公环境</div>
 		<div class="my-slider-carousel owl-carousel owl-theme">
 			<div class="slide">
 				<div class="content wow fadeInUp100">
