--- a/common/footer.html
+++ b/common/footer.html
@@ -95,13 +95,13 @@
 							<div class="copyright">© 2018 Adient plc. All Rights Reserved
 								2016年10月31日，Adient plc(“Adient”)完成了与Johnson Controls International plc(“Johnson Controls”)的分离，现在是一个独立的公开贸易公司。而不是约翰逊的管理者，负责这项业务的运作，包括这个网站。
 							</div>
-							<div class="clause"><a href="#" style="font-size:12px">私人使用条款</a></div>
+							<div class="clause"><a href="http://www.miitbeian.gov.cn" style="font-size:12px">渝ICP备18007434号-1</a></div>
 						</div>
 					</div>
 					
 					<!-- <div class="column col-lg-2 col-md-12 col-sm-12">
 						<ul class="footer-nav clearfix">
-							<li ><a href="#" style="font-size:12px">私人使用条款</a></li>
+							<li ><a href="#" style="font-size:12px">渝ICP备18007434号-1</a></li>
 						</ul>
 					</div> -->
 				</div>
