--- a/profession.html
+++ b/profession.html
@@ -53,7 +53,7 @@
 	font-weight: 600;
 }
 .font7{
-	font-size: 28px;
+	font-size: 36px;
 	font-weight: 600;
 }
 .section1 .content{
@@ -145,8 +145,8 @@
 	font-size: 16px;
 }
 .section4 .cont1{
-	height: 40px;
-    line-height: 35px;
+	height: 45px;
+    line-height: 40px;
     padding-left: 10px;
 }
 .section4 .cont2{
@@ -455,7 +455,7 @@
 		<img src="images/profession/2-1.jpg">
 		<div class="content my-column-center">
 			<div class="wow fadeInLeft">
-				<div class="cont1 font7"><span>面向校园</span>及社会招聘</div>
+				<div class="cont1 font7 my-color2"><span>面向校园</span>及社会招聘</div>
 				<div class="cont2 font2 my-color2">这是一个追求卓越的组织；</div>
 				<div class="cont3">每一个加入这里的人，都是有信念，有态度，有追求的人，我们志同道合，不忘初心；<br>
 				每个人在这里变得更好，至臻尽善。</div>
