关于我们-地图动画效果

--- a/about.html
+++ b/about.html
@@ -90,6 +90,10 @@
 	width: 100%;
 	margin-bottom: 15px;
 }
+.new-img{
+	position:absolute;
+	width: 0;
+}
 
 .slide2 .content{
 	position: absolute;
@@ -483,8 +487,9 @@
 								<img class="current-img" src="images/about/cq-yf.png">
 								<h5 class="current-text">重庆延锋安道拓汽车部件系统有限公司</h5>
 							</div>
+							
 					</div>
-					
+					<img class="new-img" src="" />
 			</div>
 			<!--第5屏-->
 			<div class="swiper-slide slide5">
