--- a/technology.html
+++ b/technology.html
@@ -400,7 +400,7 @@
 			<div class="swiper-slide slide1">
 				<img class="slide-bg" src="images/main-slider/image-3.jpg">
 				<div class="content-box">
-					<img class="content1 animated" data-my-animate="rollIn" src="images/main-slider/zy1.png">
+					<img class="content1 animated" data-my-animate="fadeInLeft" src="images/main-slider/zy1.png">
 					<div class="content text-right">
 							<h3 class="text1 animated ani-time2" data-my-animate="fadeInRight">创新研发</h3>
 							<h3 class="text2 animated ani-time3" data-my-animate="fadeInRight">
