ie上面图片显示不全

--- a/product.html
+++ b/product.html
@@ -42,6 +42,9 @@
 .slide4 .box2{
 	flex-direction: column;
 }
+.slide4 .box3{
+	display: block !important;
+}
 .slide-cloumn3 .box1 .content,
 .slide-cloumn3 .box2 .content{
 	height: 50%;
