--- a/about.html
+++ b/about.html
@@ -66,6 +66,8 @@
 }
 #map .content-box h5{
 	font-size: 16px;
+	width: 130%;
+    margin-left: -15%;
 }
 #map .content1{
 	position: relative;
@@ -85,6 +87,7 @@
 	max-width: 510px;
 	text-align: center;
 	height: 50%;
+	visibility: hidden;
 }
 .current-info img{
 	width: 100%;
@@ -158,10 +161,8 @@
 	text-align: center;
 }
 .slide5 .logo-box .item-box{
-	height: 20%;
+	height: 24%;
 	margin-top: 5px;
-	/* display: flex;
-    justify-content: space-between; */
 }
 .slide5 .logo-box img{
 	max-height: 100%;
@@ -407,7 +408,7 @@
 					<div class="region-list color1 active postition-2 online-node" data-type="重庆延锋安道拓汽车部件系统有限公司" data-img="images/about/cq-yf.png">
 						<div class="area-box"><span class="dot"><img src="images/icons/marker2.png"></span>
 						</div>
-						<div class="show-regin"><span>重庆</span></div>
+						<div class="show-regin allRegin"><span>重庆</span></div>
 					</div>
 					<div class="region-list color1 postition-2-1 online-node" data-type="重庆延锋安道拓汽车部件系统有限公司江津分公司" data-img="images/about/cq-jj.png">
 						<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
