--- a/common/header.html
+++ b/common/header.html
@@ -32,7 +32,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="product.html?item=2">乘用车座椅</a></li>
 										<li><a href="product.html?item=3">商用车座椅</a></li>
-										<li><a href="product.html?item=4">骨架</a></li>
+										<li><a href="product.html?item=4">骨架与零部件</a></li>
 										<li><a href="product.html?item=4">面套</a></li>
 										<li><a href="product.html?item=5">泡沫</a></li>
 									</ul>
@@ -109,7 +109,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="product.html?item=2">乘用车座椅</a></li>
 										<li><a href="product.html?item=3">商用车座椅</a></li>
-										<li><a href="product.html?item=4">骨架</a></li>
+										<li><a href="product.html?item=4">骨架与零部件</a></li>
 										<li><a href="product.html?item=4">面套</a></li>
 										<li><a href="product.html?item=5">泡沫</a></li>
 									</ul>
