--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-3.jpg">
 						</div> -->
-						<div class="swiper-slide">
+						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-4.jpg">
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="content-box animated" data-my-animate="fadeInLeft" style="z-index:1">
