--- a/profession.html
+++ b/profession.html
@@ -53,7 +53,7 @@
 	font-weight: 600;
 }
 .font7{
-	font-size: 36px;
+	font-size: 28px;
 	font-weight: 600;
 }
 .section1 .content{
@@ -62,7 +62,7 @@
     right: 0;
     bottom: 20px;
     background-color: rgba(4,69,87,0.8);
-    padding: 20px 120px 20px 30px;
+    padding: 20px 0 20px 30px;
 }
 .section1 .cont2{
 	margin: 20px 0 15px;
@@ -727,7 +727,7 @@
 		</div>
 	</section>
 	<section class="main-slider welcome-section section8 my-color1" data-item="8" style="padding:0">
-		<div class="title my-bg-color7 my-color2 font7">办公环境</div>
+		<div class="title my-bg-color7 my-color2 font7">工作体验</div>
 		<div class="my-slider-carousel owl-carousel owl-theme">
 			<div class="slide">
 				<div class="content wow fadeInUp100">
