--- a/technology.html
+++ b/technology.html
@@ -364,6 +364,7 @@
 .slide5 .cont2,
 .slide5 .cont3{
 	font-size: 16px;
+	font-weight: 600;
 }
 .slide5 .column-4 .content-box{
 	background: rgba(190, 213, 51, 0.8);
