--- a/common/footer.html
+++ b/common/footer.html
@@ -17,7 +17,7 @@
 									<ul class="footer-link">
 										<li><a href="product.html?item=2">乘用车座椅</a></li>
 										<li><a href="product.html?item=3">商用车座椅</a></li>
-										<li><a href="product.html?item=4">骨架</a></li>
+										<li><a href="product.html?item=4">骨架与零部件</a></li>
 										<li><a href="product.html?item=4">面套</a></li>
 										<li><a href="product.html?item=5">泡沫</a></li>
 									</ul>
@@ -87,6 +87,7 @@
 				<div class="row clearfix">
 					<div class="footer-cont1 column">
 						<div class="logo">
+							<div class="logo-lable">友情链接：</div>
 							<!-- <a href="#"><img src="images/logo.png" alt="" /></a> -->
 							<a href="https://www.adient.com"><img src="images/logo1.png" alt="" /></a>	
 							<a href="https://www.yanfengadient.com/"><img src="images/logo2.png" alt="" /></a>	
