--- a/common/footer.html
+++ b/common/footer.html
@@ -44,7 +44,8 @@
 								<div class="column col-lg-2 col-md-6 col-sm-6">
 								<h2>企业文化</h2>
 									<ul class="footer-link">
-										<li><a href="culture.html?item=2">文化活动</a></li>
+										<li><a href="culture.html?item=3">文化项目</a></li>
+										<li><a href="culture.html?item=4">文化的力量</a></li>
 										<li><a href="culture.html?item=5">社会责任</a></li>
 										<li><a href="culture.html?item=8">杂志《认知》</a></li>
 									</ul>
