--- a/common/header.html
+++ b/common/header.html
@@ -57,7 +57,8 @@
 								<li class="dropdown" data-type="culture">
 									<a href="culture.html">企业文化</a>
 									<ul class="dropdown-menu">
-										<li><a href="culture.html?item=2">文化活动</a></li>
+										<li><a href="culture.html?item=3">文化项目</a></li>
+										<li><a href="culture.html?item=4">文化的力量</a></li>
 										<li><a href="culture.html?item=5">社会责任</a></li>
 										<li><a href="culture.html?item=8">杂志《认知》</a></li>
 									</ul>
@@ -134,7 +135,8 @@
 								<li class="dropdown" data-type="culture">
 									<a href="culture.html">企业文化</a>
 									<ul class="dropdown-menu">
-										<li><a href="culture.html?item=2">文化活动</a></li>
+										<li><a href="culture.html?item=3">文化项目</a></li>
+										<li><a href="culture.html?item=4">文化的力量</a></li>
 										<li><a href="culture.html?item=5">社会责任</a></li>
 										<li><a href="culture.html?item=8">杂志《认知》</a></li>
 									</ul>
