--- a/culture.html
+++ b/culture.html
@@ -321,8 +321,8 @@
 .section8 .img-content{
 	position: relative;
     display: flex;
-	margin-top: 20px;
-	padding: 0 20%;
+	margin: 20px;
+	padding: 0 15%;
 	justify-content: space-around;
 }
 .section8 .img-content .item-box{
@@ -646,7 +646,7 @@
 			<div class="item-box item3 isClick" data-url="file/83.pdf"><img src="images/culture/8-3.jpg"></div>
 			<div class="item-box item4 isClick" data-url="file/82.pdf"><img src="images/culture/8-4.jpg"></div>
 		</div>
-		<div class="more"><img src="images/culture/more.png"></div>
+		<!-- <div class="more"><img src="images/culture/more.png"></div> -->
 	</section>
 	
 	
