--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 	display: none;
 }
 .slide6 .item1{
-	font-size: 28px;
+	font-size: 32px;
 	font-weight: 600;
 }
 .slide6 .item1>div{
@@ -207,14 +207,14 @@
 						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-3.jpg">
 						</div> -->
-						<!-- <div class="swiper-slide">
+						<div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-4.jpg">
-						</div> -->
+						</div>
 					</div>
 				</div>
 				<div class="content-box animated" data-my-animate="fadeInLeft" style="z-index:1">
 						<div class="content text-center">
-							<h2 class="my-color2"><div>提升<strong>机动化世界</strong></span></div><font>的体验</font></h2>
+							<h2 class="my-color2"><div>提升<strong>机动化世界</strong>的</span></div><font>体验</font></h2>
 						</div>
 					</div>
 			</div>
@@ -376,7 +376,7 @@
 				<img class="slide-bg" src="images/index/7.jpg">
 				<div class="content">
 					<h2 style="text-align:left"><div class="animated" data-my-animate="fadeInLeft">雇主品牌</div>
-						<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft">以卓越致敬初心</div>
+						<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft" style="font-weight:600">以卓越致敬初心</div>
 					</h2>
 				</div>
 			</div>
